# eacy

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: daily-digest.yml  publish-docs.yml  validate-repo.yml
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
apps/: __init__.py
apps/router/: README.md  __init__.py  capture_router.py  cli.py  command_registry.py  daily_writer.py  intent_resolver.py  note_writer.py  policy_engine.py  repo_lint.py  schema_loader.py  template_loader.py
apps/voice-gateway/: README.md  __init__.py  combined_mode.py
apps/voice_gateway/: __init__.py  combined_mode.py  telegram_input_flow.py  telegram_webhook.py
apps/workers/: README.md  __init__.py  asset_indexer.py  audit_logger.py  clawbot_adapter.py  correlation.py  drive_sync.py  execution_dispatcher.py  github_actions_adapter.py  google_drive_adapter.py  landing_manifest_writer.py  landing_record_writer.py  n8n_adapter.py  (+2 more)
deploy/: targets.yaml
docs/: repo-tree.md
policies/: execution-policy.yaml
registry/: commands.yaml
schemas/: asset-index.schema.json  audit-entry.schema.json  audit-log-entry.schema.json  automation.schema.json  command-registry.schema.json  command.schema.json  landing-manifest.schema.json  landing-note.schema.json  note.schema.json  policy-rule.schema.json  policy.schema.json  telegram-intake-envelope.schema.json  telegram-update.schema.json
tests/: __init__.py
(+81 files in other folders)
